--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,7 +24,7 @@ a {
 }
 
 .primary-button {
-  @apply rounded bg-slate-300 py-2 px-4 shadow outline-none hover:bg-slate-500 active:bg-slate-500 active:font-bold;
+  @apply rounded bg-amber-300 py-2 px-4 shadow outline-none hover:bg-amber-400 active:bg-amber-500 active:font-bold;
 }
 
 @media (prefers-color-scheme: dark) {
